--- a/0.1.0/index.html
+++ b/0.1.0/index.html
@@ -547,7 +547,7 @@ What we want to do, instead, is to keep our build files untouched, and substitut
 <div class="title">Applying the plugin</div>
 <div class="content">
 <pre class="highlightjs highlight"><code data-lang="groovy" class="language-groovy hljs">plugins {
-    id 'me.champeau.include.git' version '0.1.0'
+    id 'me.champeau.includegit' version '0.1.0'
 }</code></pre>
 </div>
 </div>
@@ -556,7 +556,7 @@ What we want to do, instead, is to keep our build files untouched, and substitut
 <pre class="highlightjs highlight"><code data-lang="kotlin" class="language-kotlin hljs">import me.champeau.gradle.igp.gitRepositories
 
 plugins {
-    id("me.champeau.include.git") version "0.1.0"
+    id("me.champeau.includegit") version "0.1.0"
 }</code></pre>
 </div>
 </div>
